table text-center 적용

--- a/html/account.html
+++ b/html/account.html
@@ -85,7 +85,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table" style="width: 700px; margin: auto;">
+	    		<table class="table text-center" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -205,7 +205,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table" style="width: 700px; margin: auto;">
+	    		<table class="table text-center" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -325,7 +325,7 @@
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
 	    		</div>
-	    		<table class="table" style="width: 700px; margin: auto;">
+	    		<table class="table text-center" style="width: 700px; margin: auto;">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
