--- a/html/account.html
+++ b/html/account.html
@@ -17,38 +17,34 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header class="fs-5 fixed-top bg-dark" id="header">
+	<header class="fs-5 fixed-top bg-dark " id="header">
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        		<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 align-items-center">
+        		<ul class="nav col-auto me-auto mb-2 justify-content-center align-items-center">
          	 		<li><a href="index.html" class="nav-link text-secondary fs-3">KOKOA BANK</a></li>
-          			<li><a href="account.html" class="nav-link px-4 text-white">조회</a></li>
+          			<li><a href="account.html" class="nav-link px-2 text-white">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
           				<ul class="dropdown-menu fs-6" data-bs-theme="dark">
           					<li><a class="dropdown-item text-white" href="deposit.html">입금</a></li>
           					<li><a class="dropdown-item text-white" href="send.html">이체</a></li>
           					<li><a class="dropdown-item text-white" href="autoSend.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-4 text-white">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-4 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
           				<ul class="dropdown-menu fs-6" data-bs-theme="dark">
         					<li><a class="dropdown-item text-white" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
-        		<div class="text-end">
-          			<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
-					<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
-        		</div>
       		</div>
     	</div>
 	</header>
-	<div id="myCarousel" class="carousel slide carousel-dark" data-bs-touch="false" style="padding: 50px; box-sizing: border-box; margin: 80px 200px 0 200px;">
-  		<div class="carousel-inner">
+	<div id="myCarousel" class="carousel slide carousel-dark position-relative" data-bs-touch="false" style="width: 800px; padding: 50px; box-sizing: border-box; margin: 80px auto 0;">
+  		<div class="carousel-inner" style="margin: auto;">
 	    	<div class="carousel-item active">
 				<div class="d-flex justify-content-center">
 					<div class="rounded border border-dark bg-secondary" style="padding: 30px;">
@@ -61,16 +57,11 @@
 					</div>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
-	    		</div>
-	    		<br>
-	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
-	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<select class="form-select selectPeriod">
       						<option selected disabled>기간</option>
       						<option>1주일</option>
@@ -78,14 +69,18 @@
       						<option>3개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateStart" placeholder="시작일">
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
-  					</div> 
+  					</div>
+  					<div class="text-end" style="margin-left: 15%;">
+	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    			</div> 
 	    		</div>
-	    		<table class="table text-center" style="width: 700px; margin: auto;">
+	    		<table class="table text-center">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -181,16 +176,11 @@
 		    		</div>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
-	    		</div>
-	    		<br>
-	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
-	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger col-md-1" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<select class="form-select selectPeriod">
       						<option selected disabled>기간</option>
       						<option>1주일</option>
@@ -198,14 +188,18 @@
       						<option>3개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateStart" placeholder="시작일">
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
+  					<div class="text-end" style="margin-left: 15%;">
+	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    			</div> 
 	    		</div>
-	    		<table class="table text-center" style="width: 700px; margin: auto;">
+	    		<table class="table text-center">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -301,16 +295,11 @@
 					</div>
 	    		</div>
 	    		<br>
-	    		<div class="d-flex justify-content-center">
-	    			<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
-	    			<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect">계좌수정</a>
-	    		</div>
-	    		<br>
-	    		<div class="d-flex justify-content-center" style="margin-left: -17.4%;">
-	    			<button type="button" class="btn btn-danger col-md-auto" id="btnSearch">
+	    		<div class="d-flex justify-content-start">
+	    			<button type="button" class="btn btn-danger col-md-1" id="btnSearch">
 						<i class="fa-solid fa-magnifying-glass"></i>
 					</button>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<select class="form-select selectPeriod">
       						<option selected disabled>기간</option>
       						<option>1주일</option>
@@ -318,14 +307,18 @@
       						<option>3개월</option>
     					</select>
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateStart" placeholder="시작일">
   					</div>
-	    			<div class="col-md-1">
+	    			<div class="col-2">
     					<input type="text" class="form-control datepicker dateFinish" placeholder="종료일">
   					</div> 
+  					<div class="text-end" style="margin-left: 15%;">
+	    				<a class="btn btn-outline-success" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountAdd">계좌개설</a>
+	    				<a class="btn btn-outline-primary" role="button" aria-disabled="true" data-bs-toggle="modal" data-bs-target="#accountCorrect" style="margin-left: -5.5px;">계좌수정</a>
+	    			</div> 
 	    		</div>
-	    		<table class="table text-center" style="width: 700px; margin: auto;">
+	    		<table class="table text-center">
 				  	<thead>
 				    	<tr>
 				      		<th scope="col">날짜</th>
@@ -410,11 +403,11 @@
 				</table>
 	    	</div>
 	  	</div>
-	  	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="width: 32px; height: 32px; top: 50%; left: 20%; transform: translateY(-64px);">
+	  	<button class="carousel-control-prev position-absolute top-50 start-0 translate-middle-y" type="button" data-bs-target="#myCarousel" data-bs-slide="prev" style="width: 32px; height: 32px;">
 	    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Previous</span>
 	  	</button>
-	  	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="width: 32px; height: 32px; top: 50%; right: 20%; transform: translateY(-64px);">
+	  	<button class="carousel-control-next position-absolute top-50 end-0 translate-middle-y" type="button" data-bs-target="#myCarousel" data-bs-slide="next" style="width: 32px; height: 32px;">
 	    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    	<span class="visually-hidden">Next</span>
 	  	</button>
@@ -482,10 +475,10 @@
 	</div>	
 	<div class="container">
   		<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    		<ul class="nav col-md-4 justify-content-start list-unstyled d-flex">
+    		<ul class="nav col-4 justify-content-start list-unstyled d-flex">
     			<li><a href="#" class="nav-link px-2 text-secondary">KOKOA BANK</a></li>
     		</ul>
-    		<div class="col-md-4 d-flex align-items-center justify-content-end">
+    		<div class="col-4 d-flex align-items-center justify-content-end">
       			<span class="mb-3 mb-md-0 text-body-secondary">Copyright © KokoaBank Corp. All rights reserved.</span>
     		</div>
   		</footer>
