--- a/html/account.html
+++ b/html/account.html
@@ -17,29 +17,33 @@
 	<link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<header class="fs-5 fixed-top bg-dark " id="header">
+	<header class="fixed-top bg-dark" id="header">
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-auto me-auto mb-2 justify-content-center align-items-center">
-         	 		<li><a href="index.html" class="nav-link text-secondary fs-3">KOKOA BANK</a></li>
-          			<li><a href="account.html" class="nav-link px-2 text-white">조회</a></li>
+         	 		<li><a href="index.html" class="nav-link text-secondary fs-3 px-5">KOKOA BANK</a></li>
+          			<li><a href="account.html" class="nav-link px-3 text-white">조회</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
-          				<ul class="dropdown-menu fs-6" data-bs-theme="dark">
+          				<a href="#" class="nav-link px-3 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">거래</a>
+          				<ul class="dropdown-menu" data-bs-theme="dark">
           					<li><a class="dropdown-item text-white" href="deposit.html">입금</a></li>
           					<li><a class="dropdown-item text-white" href="send.html">이체</a></li>
           					<li><a class="dropdown-item text-white" href="autoSend.html">자동이체</a></li>
         				</ul>
           			</li>
-          			<li><a href="exchangeRate.html" class="nav-link px-2 text-white">환율</a></li>
+          			<li><a href="exchangeRate.html" class="nav-link px-3 text-white">환율</a></li>
           			<li class="dropdown">
-          				<a href="#" class="nav-link px-2 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
-          				<ul class="dropdown-menu fs-6" data-bs-theme="dark">
+          				<a href="#" class="nav-link px-3 text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false">주식</a>
+          				<ul class="dropdown-menu" data-bs-theme="dark">
         					<li><a class="dropdown-item text-white" href="domesticStock.html">국내</a></li>
           					<li><a class="dropdown-item text-white" href="foreignStock.html">해외</a></li>
         				</ul>
           			</li>
         		</ul>
+        		<div class="col text-end">
+          			<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signIn" id="btnSignin">로그인</button>
+					<button type="button" class="btn text-white" data-bs-toggle="modal" data-bs-target="#signUp" id="btnSignup">회원가입</button>	
+        		</div>
       		</div>
     	</div>
 	</header>
