--- a/html/login.html
+++ b/html/login.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>KOKOA BANK LOGIN</title>
-	<meta content="" name="description">
-	<meta content="" name="keywords">
-	<!-- Favicons -->
-	<link href="assets/img/favicon.png" rel="icon">
-	<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 	<!-- Google Fonts -->
 	<link href="https://fonts.gstatic.com" rel="preconnect">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -28,45 +22,36 @@
 <body>
   	<main>
 		<div class="container">
-
       		<section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
         		<div class="container">
           			<div class="row justify-content-center">
             			<div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-
               				<div class="d-flex justify-content-center py-4">
                 				<a href="index.html" class="logo d-flex align-items-center w-auto">
                   					<!-- <img src="assets/img/logo.png" alt=""> -->
                   					<span class="d-none d-lg-block">KOKOA BANK</span>
                 				</a>
-              				</div><!-- End Logo -->
-
+              				</div>
               				<div class="card mb-3">
-
                 				<div class="card-body">
-
                   					<div class="pt-4 pb-2">
                     					<h5 class="card-title text-center pb-0 fs-4">로그인</h5>
-                    					<p class="text-center small">아이디와 비밀번호를 입력 후 로그인 해주세요.</p>
+                    					<p class="text-center small">아이디와 비밀번호를 입력 후 로그인해 주세요.</p>
                   					</div>
-
                   					<form class="row g-3 needs-validation" novalidate>
-
                    						<div class="col-12">
                       						<label for="yourUsername" class="form-label">아이디(이메일)</label>
                       						<div class="input-group has-validation">
                         						<span class="input-group-text" id="inputGroupPrepend">@</span>
                         						<input type="text" name="username" class="form-control" id="yourUsername" required>
-                        						<div class="invalid-feedback">올바른 아이디(이메일)을 입력해주세요.</div>
+                        						<div class="invalid-feedback">올바른 아이디(이메일)을 입력해 주세요.</div>
                    							</div>
                    						</div>
-
                     					<div class="col-12">
                       						<label for="yourPassword" class="form-label">비밀번호</label>
                       						<input type="password" name="password" class="form-control" id="yourPassword" required>
-                      						<div class="invalid-feedback">올바른 비밀번호를 입력해주세요.</div>
+                      						<div class="invalid-feedback">올바른 비밀번호를 입력해 주세요.</div>
                     					</div>
-
                     					<div class="col-12">
                       						<div class="form-check">
                         						<input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
@@ -77,32 +62,21 @@
                       						<button class="btn btn-primary w-100" type="submit">로그인</button>
                     					</div>
                     					<div class="col-12">
-                      						<p class="small mb-0">아이디가 없으신가요? <a href="pages-register.html">회원가입</a></p>
+                      						<p class="small mb-0">아이디가 없으신가요? <a href="register.html">회원가입</a></p>
                     					</div>
                   					</form>
-
                 				</div>
               				</div>
-
               				<div class="credits">
-		                		<!-- All the links in the footer should remain intact. -->
-			                	<!-- You can delete the links only if you purchased the pro version. -->
-			                	<!-- Licensing information: https://bootstrapmade.com/license/ -->
-			                	<!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
 		               	 		<a href="index.html">KOKOA BANK</a>
 		              		</div>
-
             			</div>
           			</div>
         		</div>
-
    			</section>
-
    		</div>
-	</main><!-- End #main -->
-
+	</main>
   	<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
 	<!-- Vendor JS Files -->
 	<script src="assets/vendor/apexcharts/apexcharts.min.js"></script>
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -112,10 +86,7 @@
 	<script src="assets/vendor/simple-datatables/simple-datatables.js"></script>
 	<script src="assets/vendor/tinymce/tinymce.min.js"></script>
 	<script src="assets/vendor/php-email-form/validate.js"></script>
-	
 	<!-- Template Main JS File -->
 	<script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
