--- a/html/admin.html
+++ b/html/admin.html
@@ -81,12 +81,12 @@
         		</a>
         		<ul id="tables-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
           			<li>
-            			<a href="tables-general.html">
+            			<a href="#">
               				<i class="bi bi-circle"></i><span>General Tables</span>
             			</a>
           			</li>
           			<li>
-            			<a href="tables-data.html" class="active">
+            			<a href="#" class="active">
               				<i class="bi bi-circle"></i><span>Data Tables</span>
             			</a>
           			</li>
@@ -111,7 +111,7 @@
 			        <div class="card">
             			<div class="card-body">
               				<h5 class="card-title">Datatables</h5>
-              				<p>Add lightweight datatables to your project with using the <a href="https://github.com/fiduswriter/Simple-DataTables" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p>
+              				<p>Add lightweight datatables to your project with using the <a href="#" target="_blank">Simple DataTables</a> library. Just add <code>.datatable</code> class name to any table you wish to conver to a datatable</p>
 							<table class="table datatable">		
                 				<thead>
                   					<tr>
