index파일 header랑 nav > sidebar로 교체

--- a/html/admin.html
+++ b/html/admin.html
@@ -93,7 +93,7 @@
         		</ul>
       		</li>
     	</ul>
-	</aside><!-- End Sidebar-->
+	</aside>
   	<main id="main" class="main">
 	    <div class="pagetitle">
       		<h1>Data Tables</h1>
