--- a/html/login.html
+++ b/html/login.html
@@ -40,17 +40,14 @@
                   					</div>
                   					<form class="row g-3 needs-validation" novalidate>
                    						<div class="col-12">
-                      						<label for="yourUsername" class="form-label">아이디(이메일)</label>
-                      						<div class="input-group has-validation">
-                        						<span class="input-group-text" id="inputGroupPrepend">@</span>
-                        						<input type="text" name="username" class="form-control" id="yourUsername" required>
-                        						<div class="invalid-feedback">올바른 아이디(이메일)을 입력해 주세요.</div>
-                   							</div>
+                      						<label for="yourUsername" class="form-label">아이디</label>
+                      						<input type="text" name="username" class="form-control" id="yourUsername" required>
+                       						<div class="invalid-feedback">아이디를 입력해 주세요.</div>
                    						</div>
                     					<div class="col-12">
                       						<label for="yourPassword" class="form-label">비밀번호</label>
                       						<input type="password" name="password" class="form-control" id="yourPassword" required>
-                      						<div class="invalid-feedback">올바른 비밀번호를 입력해 주세요.</div>
+                      						<div class="invalid-feedback">비밀번호를 입력해 주세요.</div>
                     					</div>
                     					<div class="col-12">
                       						<div class="form-check">
