--- a/html/register.html
+++ b/html/register.html
@@ -42,26 +42,23 @@
                   					<form class="row g-3 needs-validation" novalidate>
                   						<div class="col-12">
                     						<label for="id" class="form-label">아이디</label>
-                    						<input type="text" name="name" class="form-control" id="id" required>
+                    						<input type="text" name="id" class="form-control" id="id" required>
                     						<div class="invalid-feedback">아이디를 입력해 주세요.</div>
                     					</div>
                     					<div class="col-12">
                     						<label for="lastName" class="form-label">성</label>
-                    						<input type="text" name="name" class="form-control" id="lastName" required>
+                    						<input type="text" name="lastName" class="form-control" id="lastName" required>
                     						<div class="invalid-feedback">성을 입력해 주세요.</div>
                     					</div>
                     					<div class="col-12">
                     						<label for="firstName" class="form-label">이름</label>
-                      						<input type="text" name="name" class="form-control" id="firstName" required>	
+                      						<input type="text" name="firstName" class="form-control" id="firstName" required>	
                    							<div class="invalid-feedback">이름을 입력해 주세요.</div>
                     					</div>
                     					<div class="col-12">
                       						<label for="email" class="form-label">이메일</label>
-                      						<div class="input-group has-validation">
-                        						<span class="input-group-text" id="inputGroupPrepend">@</span>
-                        						<input type="text" name="username" class="form-control" id="yourUsername" required>
-                        						<div class="invalid-feedback">이메일을 입력해 주세요.</div>
-                   							</div>
+                       						<input type="text" name="email" class="form-control" id="yourUsername" required>
+                       						<div class="invalid-feedback">이메일을 입력해 주세요.</div>
                     					</div>
                    						<div class="col-12">
                   							<label for="password" class="form-label">비밀번호</label>
@@ -70,7 +67,7 @@
                    						</div>
                    						<div class="col-12">
                   							<label for="passwordCheck" class="form-label">비밀번호 확인</label>
-                   							<input type="password" name="password" class="form-control" id="passwordCheck" required>
+                   							<input type="password" name="passwordCheck" class="form-control" id="passwordCheck" required>
                    							<div class="invalid-feedback">비밀번호가 일치하지 않습니다.</div>
                    						</div>
                    						<div class="col-12">
