--- a/admin/adminFee.html
+++ b/admin/adminFee.html
@@ -61,7 +61,7 @@
 					                    <th scope="col">seq</th>
 					                    <th scope="col">이름</th>
 					                    <th scope="col">계좌번호</th>
-					                    <th scope="col">전화번호</th>
+					                    <th scope="col">수수료</th>
                						</tr>
                					</thead>
                 				<tbody>
