--- a/admin/adminInfuencer.html
+++ b/admin/adminInfuencer.html
@@ -60,8 +60,8 @@
 					                    </th>
 					                    <th scope="col">seq</th>
 					                    <th scope="col">이름</th>
-					                    <th scope="col">계좌번호</th>
-					                    <th scope="col">전화번호</th>
+					                    <th scope="col">유튜브</th>
+					                    <th scope="col">인스타</th>
                						</tr>
                					</thead>
                 				<tbody>
