--- a/admin/adminCustomer.html
+++ b/admin/adminCustomer.html
@@ -59,9 +59,10 @@
 				                    		<input type="checkbox" name="checked" id="allCheck" value="">
 					                    </th>
 					                    <th scope="col">seq</th>
+					                    <th scope="col">아이디</th>
 					                    <th scope="col">이름</th>
-					                    <th scope="col">계좌번호</th>
-					                    <th scope="col">전화번호</th>
+					                    <th scope="col">연락처</th>
+					                    <th scope="col">이메일</th>
                						</tr>
                					</thead>
                 				<tbody>
@@ -73,14 +74,16 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
 					                    <td scope="col">
 					                    	<input type="checkbox" name="checked" value="">
 					                    </td>
-				                     	<td>2</td>
+					                    <td>1</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -91,6 +94,7 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
 					                    <td scope="col">
@@ -99,6 +103,7 @@
 					                    <td>4</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -109,6 +114,7 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
 					                    <td scope="col">
@@ -118,14 +124,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -136,14 +134,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -154,14 +144,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -172,14 +154,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -190,14 +164,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -208,14 +174,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -226,14 +184,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -244,14 +194,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -262,14 +204,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -279,6 +213,97 @@
 					                    <td>7</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -289,6 +314,7 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
                   					<tr>
 					                    <td scope="col">
 					                    	<input type="checkbox" name="checked" value="">
@@ -296,6 +322,7 @@
 					                    <td>7</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -306,6 +333,7 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
 					                    <td scope="col">
@@ -314,6 +342,7 @@
 					                    <td>7</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -324,14 +353,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -342,14 +363,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -360,14 +373,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -378,14 +383,6 @@
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
-                  					</tr>
-                  					<tr>
-					                    <td scope="col">
-					                    	<input type="checkbox" name="checked" value="">
-					                    </td>
-					                    <td>7</td>
-					                    <td>홍길동</td>
-					                    <td>3333-74-8759</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                   					<tr>
@@ -395,6 +392,87 @@
 					                    <td>7</td>
 					                    <td>홍길동</td>
 					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
+					                    <td>010-1234-5678</td>
+                  					</tr>
+                  					<tr>
+					                    <td scope="col">
+					                    	<input type="checkbox" name="checked" value="">
+					                    </td>
+					                    <td>7</td>
+					                    <td>홍길동</td>
+					                    <td>3333-74-8759</td>
+					                    <td>010-1234-5678</td>
 					                    <td>010-1234-5678</td>
                   					</tr>
                 				</tbody>
