--- a/admin/adminTransaction.html
+++ b/admin/adminTransaction.html
@@ -59,9 +59,9 @@
 				                    		<input type="checkbox" name="checked" id="allCheck" value="">
 					                    </th>
 					                    <th scope="col">seq</th>
-					                    <th scope="col">이름</th>
+					                    <th scope="col">거래유형</th>
 					                    <th scope="col">계좌번호</th>
-					                    <th scope="col">전화번호</th>
+					                    <th scope="col">거래금액</th>
                						</tr>
                					</thead>
                 				<tbody>
