--- a/admin/adminTransaction.html
+++ b/admin/adminTransaction.html
@@ -27,7 +27,7 @@
 		<div class="container">
       		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         		<ul class="nav col-auto me-auto mb-2 align-items-center">
-         	 		<li><a href="#" class="nav-link text-secondary fs-3 px-5">KOKOA BANK</a></li>
+         	 		<li><a href="adminMain.html" class="nav-link text-secondary fs-3 px-5">KOKOA BANK</a></li>
           			<li><a href="adminAccount.html" class="nav-link px-3 text-black">계좌관리</a></li>
           			<li><a href="adminTransaction.html" class="nav-link px-3 text-black">거래관리</a></li>
           			<li><a href="adminCustomer.html" class="nav-link px-3 text-black">고객관리</a></li>
