--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
   	<main>
 		<div class="container">
       		<section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-        		<div class="container" style="margin-top: -500px;">
+        		<div class="container">
           			<div class="row justify-content-center">
             			<div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
               				<div class="d-flex justify-content-center py-4">
@@ -49,8 +49,9 @@
                         						<label class="form-check-label" for="rememberMe">아이디 저장</label>
                       						</div>
                     					</div>
-                   						<div class="col-12">
-                      						<button class="btn btn-outline-secondary w-100" type="submit">로그인</button>
+                   						<div class="col-12 d-flex">
+                      						<button class="btn btn-outline-secondary w-50" id="submitForm" type="submit">로그인</button>
+                      						<button class="btn btn-outline-secondary btnCancel w-50" type="button">뒤로</button>
                     					</div>
                     					<div class="col-12">
                       						<p class="small mb-0">아이디가 없으신가요? <a href="register.html">회원가입</a></p>
@@ -66,5 +67,13 @@
 	</main>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<script src="assets/js/main.js"></script>
+	<script type="text/javascript">
+	
+		// 이전 버튼 스크립트
+		document.querySelector('.btnCancel').addEventListener('click', function() {
+	  		window.history.back();
+		});
+	
+	</script>
 </body>
 </html>
